Update success page

--- a/app/pages/success.html
+++ b/app/pages/success.html
@@ -13,8 +13,7 @@
     <script src="../app.js"></script>
     <script type="text/ng-template" id="success.html">
         <div ng-controller="successCtrl" class="padded-more padded-top-more">
-            <div class="alert-message success">
-                <div class="box-icon"></div>
+            <div class="alert-message success text-center">
                 <p>Access token generated successfully.</p>
             </div>
 
