Update index page

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ Released   : 20140228
 			<span class="byline">If you want to contribute to make UbAuth better, just create a pull request. :)</span>
 		</div>
 		<ul class="actions">
-			<li><a href="https://github.com/chrisenytc/ubauth/" class="button">Create A Pull Request</a></li>
+			<li><a href="https://github.com/chrisenytc/ubauth/" class="button" target="_blank">Create A Pull Request</a></li>
 		</ul>
 	</div>
 </div>
 <div id="copyright" class="container">
     <p>Copyright &copy; 2016 Christopher EnyTC</p>
     <p>All rights reserved.</p>
-    <p>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    <p>Design by <a href="http://templated.co" rel="nofollow" target="_blank">TEMPLATED</a>.</p>
 </div>
 </body>
 </html>
