Add source code button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Released   : 20140228
 				<li><a href="https://github.com/chrisenytc/ubauth/releases/latest" accesskey="4" title="Download the app" target="_blank">Downloads</a></li>
                 <li><a href="https://github.com/chrisenytc/ubauth#contributing" accesskey="5" title="Help improve UbAuth" target="_blank">Contribute</a></li>
                 <li><a href="https://github.com/chrisenytc/ubauth#donate" accesskey="5" title="Donate to help maintain the project" target="_blank">Donate</a></li>
+                <li><a href="https://github.com/chrisenytc/ubauth" accesskey="5" title="Donate to help maintain the project" target="_blank">Source Code</a></li>
 			</ul>
 		</div>
 	</div>
